add healt protocol

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 <div class="fh5co-loader"></div>
 
 <!-- Modal -->
-<div class="modal fade col-md-12 col-xs-12" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade col-md-12 col-xs-12" id="exampleModalCenter" tabindex="-1" role="dialog"
+     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -95,7 +96,8 @@
         </div>
     </nav>
 
-    <header id="fh5co-header" class="fh5co-cover" style="background-image:url(img/tesBack.jpeg); background-position: center; height: 945px" role="banner"
+    <header id="fh5co-header" class="fh5co-cover"
+            style="background-image:url(img/tesBack.jpeg); background-position: center; height: 945px" role="banner"
             data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -106,7 +108,8 @@
                             <p style="margin-top: 590px; font-size: 22px; color: #cacaca"><b>You Are Invited!</b></p>
                             <p style="margin-top: -20px; font-size: 15px; color: #cacaca">The Wedding Celebration of</p>
                             <h1 style="margin-top: -20px">Amy &amp; Elvan</h1>
-                            <p style="margin-top: 20px" onclick="do_change()"><a id="iconPlay" class="btn btn-sm">Open Invitation</a></p>
+                            <p style="margin-top: 20px" onclick="do_change()"><a id="iconPlay" class="btn btn-sm">Open
+                                Invitation</a></p>
                         </div>
                     </div>
                 </div>
@@ -115,15 +118,15 @@
     </header>
 
     <div id="bodys" style="display: none">
-        <div id="fh5co-header" class="fh5co-cover" style="background-image:url(img/pre1.jpeg); background-position: center; height: 755px" role="banner"
-                data-stellar-background-ratio="0.5">
+        <div id="fh5co-header" class="fh5co-cover"
+             style="background-image:url(img/pre1.jpeg); background-position: center; height: 755px" role="banner"
+             data-stellar-background-ratio="0.5">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                <p style="margin-top: 550px; font-size: 22px; color: #cacaca"><b>You Are Invited!</b></p>
-                                <p style="margin-top: -20px; font-size: 15px; color: #cacaca">The Wedding Celebration of</p>
+                                <p style="margin-top: 550px; font-size: 15px; color: #cacaca">The Wedding of</p>
                                 <h1 style="margin-top: -20px">Amy &amp; Elvan</h1>
                             </div>
                         </div>
@@ -132,7 +135,7 @@
             </div>
         </div>
 
-<!--        <img src="img/pre1.jpeg" alt="groom" class="img-responsive fadeOutUp">-->
+        <!--        <img src="img/pre1.jpeg" alt="groom" class="img-responsive fadeOutUp">-->
         <div id="fh5co-couple">
             <div class="container">
                 <div class="row">
@@ -182,20 +185,18 @@
                             <div class="col-md-10 col-md-offset-1">
                                 <div class="col-md-6 col-sm-6 text-center">
                                     <div class="event-wrap animate-box">
-                                        <h3>AKAD</h3>
+                                        <h3>AKAD NIKAH</h3>
                                         <div class="event-col">
                                             <i class="icon-clock"></i>
-                                            <span>8:00 AM - 11:00 AM</span>
+                                            <span>8:00 AM -<br/>11:00 AM</span>
                                         </div>
                                         <div class="event-col">
                                             <i class="icon-calendar"></i>
                                             <span>Sabtu</span>
-                                            <span>12 02 2022</span>
+                                            <span>12 Februari 2022</span>
                                         </div>
-                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                            Consonantia, there live the blind texts. Separated they live in
-                                            Bookmarksgrove right at the coast of the Semantics, a large language
-                                            ocean.</p>
+                                        <p>Gedung Poltekkes</p>
+                                        <p>Desa Teladan, Curup Selatan,<br/>Rejang Lebong, Bengkulu.<br/>39119</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-sm-6 text-center">
@@ -203,23 +204,23 @@
                                         <h3>RESEPSI</h3>
                                         <div class="event-col">
                                             <i class="icon-clock"></i>
-                                            <span>11:00 AM - 03:00 PM</span>
+                                            <span>11:00 AM -<br/>03:00 PM</span>
                                         </div>
                                         <div class="event-col">
                                             <i class="icon-calendar"></i>
                                             <span>Sabtu</span>
-                                            <span>12 02 2022</span>
+                                            <span>12 Februari 2022</span>
                                         </div>
-                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                            Consonantia, there live the blind texts. Separated they live in
-                                            Bookmarksgrove right at the coast of the Semantics, a large language
-                                            ocean.</p>
+                                        <p>Gedung Poltekkes</p>
+                                        <p>Desa Teladan, Curup Selatan,<br/>Rejang Lebong, Bengkulu.<br/>39119</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-12 text-center">
                                 <!--                                    <a style="color: antiquewhite" href="https://goo.gl/maps/aWuTzJKswUBXP6hW9"><i class="icon-map"></i> View Location</a>-->
-                                <a style="color: antiquewhite !important" type="button" class="btn btn-sm" href="https://goo.gl/maps/aWuTzJKswUBXP6hW9"><i class="icon-map"></i> View Location</a>
+                                <a style="color: antiquewhite !important" type="button" class="btn btn-sm"
+                                   href="https://goo.gl/maps/aWuTzJKswUBXP6hW9"><i class="icon-map"></i> View
+                                    Location</a>
                             </div>
                         </div>
                     </div>
@@ -291,7 +292,7 @@
             </div>
         </div>
 
-        <div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
+        <div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(img/ring.jpeg);">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
@@ -324,14 +325,14 @@
                 <div class="row row-bottom-padded-md">
                     <div class="col-md-12">
                         <ul id="fh5co-gallery-list">
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(img/pre10.jpeg)">
-								<a href="img/pre10.jpeg" class="color-5"></a>
-							</li>
-							<li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(img/pre11.jpeg)">
-								<a href="img/pre11.jpeg" class="color-6"></a>
-							</li>
+                            <li class="one-third animate-box" data-animate-effect="fadeIn"
+                                style="background-image: url(img/pre10.jpeg)">
+                                <a href="img/pre10.jpeg" class="color-5"></a>
+                            </li>
+                            <li class="one-third animate-box" data-animate-effect="fadeIn"
+                                style="background-image: url(img/pre11.jpeg)">
+                                <a href="img/pre11.jpeg" class="color-6"></a>
+                            </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre44.jpeg)">
                                 <a href="img/_EJP7769.jpg"></a>
@@ -346,18 +347,18 @@
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre5.jpeg)">
-                                <a href="img/pre5.jpeg"class="color-4"></a>
+                                <a href="img/pre5.jpeg" class="color-4"></a>
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre6.jpeg)">
                                 <a href="img/pre6.jpeg" class="color-3"></a>
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(img/pre7.jpeg)">
+                                style="background-image: url(img/pre7.jpeg)">
                                 <a href="img/pre7.jpeg" class="color-4"></a>
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
-								style="background-image: url(img/pre9.jpeg)">
+                                style="background-image: url(img/pre9.jpeg)">
                                 <a href="img/pre9.jpeg" class="color-4"></a>
                             </li>
                         </ul>
@@ -373,43 +374,49 @@
                         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                             <span><a></a></span>
                             <h2>Wedding Gift</h2>
-                            <p>Bagi keluarga, sahabat dan teman yang ingin mengirimkan hadiah, silakan mengirimkannya melalui tautan berikut:</p>
+                            <p>Bagi keluarga, sahabat dan teman yang ingin mengirimkan hadiah, silakan mengirimkannya
+                                melalui tautan berikut:</p>
                             <!-- Button trigger modal -->
-                            <a type="button" class="btn btn-sm" data-toggle="modal" data-target="#exampleModalCenter"><i class="icon-wallet"></i></a>
+                            <a style="color: #1c1f57" type="button" class="btn btn-lg" data-toggle="modal"
+                               data-target="#exampleModalCenter"><i style="font-size: 50px" class="icon-wallet"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
+        <div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_5.jpg);">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                        <h2>Are You Attending?</h2>
-                        <p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
+                        <h2>Health Protocol</h2>
                     </div>
                 </div>
-                <div class="row animate-box">
-                    <div class="col-md-10 col-md-offset-1">
-                        <form class="form-inline">
-                            <div class="col-md-4 col-sm-4">
-                                <div class="form-group">
-                                    <label for="name" class="sr-only">Name</label>
-                                    <input type="name" class="form-control" id="name" placeholder="Name">
-                                </div>
-                            </div>
-                            <div class="col-md-4 col-sm-4">
-                                <div class="form-group">
-                                    <label for="email" class="sr-only">Email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Email">
-                                </div>
-                            </div>
-                            <div class="col-md-4 col-sm-4">
-                                <button type="submit" class="btn btn-default btn-block">I am Attending</button>
-                            </div>
-                        </form>
+                <div class="row animate-box text-center">
+                    <div class="col-md-6 col-sm-6 col-xs-6">
+                        <div class="form-group">
+                            <img src="img/Covid-Distancing-300x220.png"
+                                 style="background-color: whitesmoke; border-radius: 40px" width="85" height="62">
+                            <p style="color: whitesmoke">Menjaga Jarak<br/>Minimal 2 Meter</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-6">
+                        <div class="form-group">
+                            <img src="img/Covid-Masker-300x220.png"
+                                 style="background-color: whitesmoke; border-radius: 40px" width="85" height="62">
+                            <p style="color: whitesmoke">Menggunakan<br/>Masker</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-6">
+                        <img src="img/Covid-WashHand-300x220.png"
+                             style="background-color: whitesmoke; border-radius: 40px" width="85" height="62">
+                        <p style="color: whitesmoke">Menggunakan <br/>Handsanitizer</p>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-6">
+                        <img src="img/Covid-Washing-300x220.png"
+                             style="background-color: whitesmoke; border-radius: 40px" width="85" height="62">
+                        <p style="color: whitesmoke">Mencuci tangan<br/>Dengan Sabun</p>
                     </div>
                 </div>
             </div>
