--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <p class="heart text-center"><i class="icon-heart2"></i></p>
                     <div class="couple-half">
                         <div class="bride">
-                            <img src="img/pre3.jpeg" alt="groom" class="img-responsive">
+                            <img src="img/pre3.jpg" alt="groom" class="img-responsive">
                         </div>
                         <div class="desc-bride">
                             <h3>Elvan Diano</h3>
@@ -234,55 +234,63 @@
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                         <span>We Love Each Other</span>
                         <h2>Our Story</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12 col-md-offset-0">
                         <ul class="timeline animate-box">
                             <li class="animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+                                <div class="timeline-badge" style="background-image:url(img/jogja.jpeg);"></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h3 class="timeline-title">First We Meet</h3>
-                                        <span class="date">December 25, 2015</span>
+                                        <h3 class="timeline-title">September 2015</h3>
                                     </div>
                                     <div class="timeline-body">
-                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                            Consonantia, there live the blind texts. Separated they live in
-                                            Bookmarksgrove right at the coast of the Semantics, a large language
-                                            ocean.</p>
+                                        <p>Awal Cerita<br/>Berawal dari perkenalan di makrab komunitas daerah Curup-Jogja, Elvan mengambil kuliah di Universitas Muhammadiyah Yogyakarta dengan jurusan Teknik Informatika, sedangkan Amy mengambil kuliah di Universitas Negeri Yogyakarta dengan jurusan Pendidikan Ekonomi. Sejak saat itu kami mulai berteman.</p>
                                     </div>
                                 </div>
                             </li>
                             <li class="timeline-inverted animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+                                <div class="timeline-badge" style="background-image:url(img/halo.png);"></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h3 class="timeline-title">First Date</h3>
-                                        <span class="date">December 28, 2015</span>
+                                        <h3 class="timeline-title">Agustus 2021</h3>
                                     </div>
                                     <div class="timeline-body">
-                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                            Consonantia, there live the blind texts. Separated they live in
-                                            Bookmarksgrove right at the coast of the Semantics, a large language
-                                            ocean.</p>
+                                        <p>Bertepatan tanggal 23 Agustus 2021 kami kembali berkomunikasi setelah 6 tahun lamanya, bermula dari komentar status reels di instagram. Setelah itu kami bertemu kembali, saling sharing dan semakin intens berkomunikasi.</p>
                                     </div>
                                 </div>
                             </li>
                             <li class="animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+                                <div class="timeline-badge" style="background-image:url(img/pre99.jpeg);"></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h3 class="timeline-title">In A Relationship</h3>
-                                        <span class="date">January 1, 2016</span>
+                                        <h3 class="timeline-title">November 2021</h3>
                                     </div>
                                     <div class="timeline-body">
-                                        <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                            Consonantia, there live the blind texts. Separated they live in
-                                            Bookmarksgrove right at the coast of the Semantics, a large language
-                                            ocean.</p>
+                                        <p>Karena dirasa satu visi & misi, akhirnya Elvan mengutarakan maksud keseriusan kepada Amy untuk melanjutkan hubungan ke jenjang yg lebih serius.</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="timeline-inverted animate-box">
+                                <div class="timeline-badge" style="background-image:url(img/ring.jpeg);"></div>
+                                <div class="timeline-panel">
+                                    <div class="timeline-heading">
+                                        <h3 class="timeline-title">Desember 2021</h3>
+                                    </div>
+                                    <div class="timeline-body">
+                                        <p>Atas restu kedua keluarga besar. Pada tanggal 4 Desember 2021 kami melangsungkan acara pertunangan.</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="animate-box">
+                                <div class="timeline-badge" style="background-image:url(img/pre16.jpeg);"></div>
+                                <div class="timeline-panel">
+                                    <div class="timeline-heading">
+                                        <h3 class="timeline-title">Februari 2022</h3>
+                                    </div>
+                                    <div class="timeline-body">
+                                        <p>Atas restu kedua orangtua dan ridho Allah SWT. Insya Allah kami akan melaksanakan Akad Nikah & Resepsi Pernikahan pada tanggal 12 Februari 2022, di gedung Poltekkes Curup.</p>
                                     </div>
                                 </div>
                             </li>
@@ -318,8 +326,6 @@
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                         <span>Our Memories</span>
                         <h2>Wedding Gallery</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.</p>
                     </div>
                 </div>
                 <div class="row row-bottom-padded-md">
@@ -422,25 +428,18 @@
             </div>
         </div>
         <footer id="fh5co-footer" role="contentinfo">
-            <div class="container">
-
-                <div class="row copyright">
-                    <div class="col-md-12 text-center">
-                        <p>
-                            <small class="block">&copy; 2022 The Wedding Event</small>
-                            <small class="block">Designed by <a target="_blank">elvan diano</a></small>
-                        </p>
-                        <p>
-                        <ul class="fh5co-social-icons">
-                            <li><a href="https://www.instagram.com/elvandiano/"><i class="icon-instagram"></i></a></li>
-                            <li><a href="https://www.facebook.com/gmcelvan/"><i class="icon-facebook"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/elvan-diano-8b03638a/"><i
-                                    class="icon-linkedin"></i></a></li>
-                        </ul>
-                        </p>
-                    </div>
-                </div>
-
+            <div class="col-md-12 text-center">
+                <p>
+                    <small class="block">&copy; 2022 The Wedding Event</small><br/>
+                    <small class="block">Designed by <a target="_blank">elvan diano</a></small>
+                </p>
+                <p>
+                <ul class="fh5co-social-icons">
+                    <li><a href="https://www.instagram.com/elvandiano/"><i class="icon-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/gmcelvan/"><i class="icon-facebook"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/elvan-diano-8b03638a/"><i class="icon-linkedin"></i></a></li>
+                </ul>
+                </p>
             </div>
         </footer>
     </div>
