--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
                                 <div class="timeline-badge" style="background-image:url(img/jogja.jpeg);"></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h3 class="timeline-title">September 2015</h3>
+                                        <h3 class="timeline-title">Tahun 2015</h3>
                                     </div>
                                     <div class="timeline-body">
-                                        <p>Awal Cerita<br/>Berawal dari perkenalan di makrab komunitas daerah Curup-Jogja, Elvan mengambil kuliah di Universitas Muhammadiyah Yogyakarta dengan jurusan Teknik Informatika, sedangkan Amy mengambil kuliah di Universitas Negeri Yogyakarta dengan jurusan Pendidikan Ekonomi. Sejak saat itu kami mulai berteman.</p>
+                                        <p>Awal Cerita<br/>Berawal dari perkenalan di makrab organisasi daerah Rejang Lebong-Jogja. Pada saat itu Elvan sedang menempuh kuliah di Jurusan Ilmu Teknologi - Universitas Muhammadiyah Yogyakarta, sedangkan Amy sedang menempuh kuliah di Jurusan Pendidikan Ekonomi - Universitas Negeri Yogyakarta. Sejak itu kami mulai berteman sebagai rekan satu organisasi.</p>
                                     </div>
                                 </div>
                             </li>
@@ -257,7 +257,7 @@
                                         <h3 class="timeline-title">Agustus 2021</h3>
                                     </div>
                                     <div class="timeline-body">
-                                        <p>Bertepatan tanggal 23 Agustus 2021 kami kembali berkomunikasi setelah 6 tahun lamanya, bermula dari komentar status reels di instagram. Setelah itu kami bertemu kembali, saling sharing dan semakin intens berkomunikasi.</p>
+                                        <p>Bermula dari komentar Elvan di status reels di instagram Amy. Kemudian kami berkomunikasi kembali untuk pertama kalinya setelah 6 tahun lamanya.</p>
                                     </div>
                                 </div>
                             </li>
@@ -268,7 +268,7 @@
                                         <h3 class="timeline-title">November 2021</h3>
                                     </div>
                                     <div class="timeline-body">
-                                        <p>Karena dirasa satu visi & misi, akhirnya Elvan mengutarakan maksud keseriusan kepada Amy untuk melanjutkan hubungan ke jenjang yg lebih serius.</p>
+                                        <p>Setelah saling mengenal lebih dalam kami memutuskan untuk bertemu di salah satu cafe di curup dengan maksud saling mengutarakan pandangan hidup dan mimpi2 yang akan diraih. Setelah dirasa kami memiliki kesamaan pandangan hidup dan mimpi yang sejalan. Akhirnya pada tanggal 4 November 2021 Elvan meminta izin untuk bertemu ortu Amy untuk mengutarakan keseriusannya dalam menjalin hubungan dengan Amy.</p>
                                     </div>
                                 </div>
                             </li>
@@ -279,7 +279,7 @@
                                         <h3 class="timeline-title">Desember 2021</h3>
                                     </div>
                                     <div class="timeline-body">
-                                        <p>Atas restu kedua keluarga besar. Pada tanggal 4 Desember 2021 kami melangsungkan acara pertunangan.</p>
+                                        <p>Atas restu kedua keluarga besar, pada tanggal 4 Desember 2021 alhamdulillah kami melangsungkan acara pertunangan dirumah Amy di Talang Benih, Curup.</p>
                                     </div>
                                 </div>
                             </li>
@@ -287,14 +287,19 @@
                                 <div class="timeline-badge" style="background-image:url(img/pre16.jpeg);"></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h3 class="timeline-title">Februari 2022</h3>
+                                        <h3 class="timeline-title">Tahun 2022</h3>
                                     </div>
                                     <div class="timeline-body">
-                                        <p>Atas restu kedua orangtua dan ridho Allah SWT. Insya Allah kami akan melaksanakan Akad Nikah & Resepsi Pernikahan pada tanggal 12 Februari 2022, di gedung Poltekkes Curup.</p>
+                                        <p>Atas restu kedua orangtua, keluarga besar dan ridho Allah SWT. InsyaAllah kami akan melaksanakan akad & resepsi pernikahan pada tanggal 12 Februari 2022, di Aula Gedung Poltekes Curup.</p>
                                     </div>
                                 </div>
                             </li>
                         </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                        <p style="font-size: 16px"><br/>Inilah cerita singkat perkenalan kami dan akan dilanjut dengan perjalanan ibadah terpanjang kami. Doakan kami selalu dalam lindungan dan keberkahan dari Allah SWT.</p>
                     </div>
                 </div>
             </div>
@@ -422,7 +427,7 @@
                     <div class="col-md-6 col-sm-6 col-xs-6">
                         <img src="img/Covid-Washing-300x220.png"
                              style="background-color: whitesmoke; border-radius: 40px" width="85" height="62">
-                        <p style="color: whitesmoke">Mencuci tangan<br/>Dengan Sabun</p>
+                        <p style="color: whitesmoke">Mencuci Tangan<br/>Dengan Sabun</p>
                     </div>
                 </div>
             </div>
