--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                         <h3 class="timeline-title">Tahun 2015</h3>
                                     </div>
                                     <div class="timeline-body">
-                                        <p>Awal Cerita<br/>Berawal dari perkenalan di makrab organisasi daerah Rejang Lebong-Jogja. Pada saat itu Elvan sedang menempuh kuliah di Jurusan Ilmu Teknologi - Universitas Muhammadiyah Yogyakarta, sedangkan Amy sedang menempuh kuliah di Jurusan Pendidikan Ekonomi - Universitas Negeri Yogyakarta. Sejak itu kami mulai berteman sebagai rekan satu organisasi.</p>
+                                        <p>Awal Cerita<br/>Berawal dari perkenalan di makrab organisasi daerah Rejang Lebong-Jogja. Pada saat itu Elvan sedang menempuh kuliah di Universitas Muhammadiyah Yogyakarta Jurusan Teknik Informatika, sedangkan Amy sedang menempuh kuliah di Universitas Negeri Yogyakarta Jurusan Pendidikan Ekonomi. Sejak itu kami mulai berteman sebagai rekan satu organisasi.</p>
                                     </div>
                                 </div>
                             </li>
@@ -298,7 +298,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                    <div class="col-md-8 col-md-offset-2 text-center animate-box">
                         <p style="font-size: 16px"><br/>Inilah cerita singkat perkenalan kami dan akan dilanjut dengan perjalanan ibadah terpanjang kami. Doakan kami selalu dalam lindungan dan keberkahan dari Allah SWT.</p>
                     </div>
                 </div>
@@ -338,39 +338,39 @@
                         <ul id="fh5co-gallery-list">
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre10.jpeg)">
-                                <a href="img/pre10.jpeg" class="color-5"></a>
+<!--                                <a href="img/pre10.jpeg" class="color-5"></a>-->
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre11.jpeg)">
-                                <a href="img/pre11.jpeg" class="color-6"></a>
+<!--                                <a href="img/pre11.jpeg" class="color-6"></a>-->
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre44.jpeg)">
-                                <a href="img/_EJP7769.jpg"></a>
+<!--                                <a href="img/_EJP7769.jpg"></a>-->
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre2.jpeg)">
-                                <a href="img/pre2.jpeg" class="color-2"></a>
+<!--                                <a href="img/pre2.jpeg" class="color-2"></a>-->
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre4.jpeg)">
-                                <a href="img/pre4.jpeg" class="color-3"></a>
+<!--                                <a href="img/pre4.jpeg" class="color-3"></a>-->
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre5.jpeg)">
-                                <a href="img/pre5.jpeg" class="color-4"></a>
+<!--                                <a href="img/pre5.jpeg" class="color-4"></a>-->
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre6.jpeg)">
-                                <a href="img/pre6.jpeg" class="color-3"></a>
+<!--                                <a href="img/pre6.jpeg" class="color-3"></a>-->
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre7.jpeg)">
-                                <a href="img/pre7.jpeg" class="color-4"></a>
+<!--                                <a href="img/pre7.jpeg" class="color-4"></a>-->
                             </li>
                             <li class="one-third animate-box" data-animate-effect="fadeIn"
                                 style="background-image: url(img/pre9.jpeg)">
-                                <a href="img/pre9.jpeg" class="color-4"></a>
+<!--                                <a href="img/pre9.jpeg" class="color-4"></a>-->
                             </li>
                         </ul>
                     </div>
